# kroxpersonas

./: .gitignore  NAMING_PURGE_2026-04-27.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/scripts/: make-latest-json.mjs
.github/workflows/: release.yml
scripts/: make-icon.mjs
src/: App.css  App.tsx  FeedbackCapture.tsx  FramedPane.tsx  ScreenAnnotateOverlay.tsx  layout.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
