[package]
name = "kroxpersonas"
version = "0.1.0"
description = "KroxPersonas — multi-account test launcher"
authors = ["KroxFlow"]
edition = "2021"

[lib]
name = "kroxpersonas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
thiserror = "1"
xcap = "0.9.4"
base64 = "0.22"
image = { version = "0.25", features = ["png"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
